assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: white;
    box-sizing: border-box;
    font-family: 'Alfa Slab One', cursive;
}

.display-flex {
    display: flex;
    justify-content: center;
    align-content: center;
}

.display-flex-row {
    display: flex;
    flex-direction: row;
}

a {
    color: inherit;
    text-decoration: none;
}

/* header */

header {
    width: 100%;
    padding: 0;
    display: flex;
    flex-direction: column;
}

/* nav bar */

.nav-link {
    color: rgb(0, 0, 0) !important;
}

.nav-link:hover {
    background-color: rgba(226, 226, 226, 0.5);
    /* border-radius: 20%; */
}

.navbar-padding-right {
    padding-right: 10px;
}

.navbar-nav > li{
    padding-left:10px;
    padding-right:10px;
}

#game-notification {
    text-align: center;
}

section {
position: relative;
}

.game-section {
    position: relative;
    min-height: 50vh;
}

.game-notification {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: 0 auto;
    padding: 30px;
}

.game-board {
    position: sticky;
    top: 1em;
    width: 80vw;
    height: 80vw;
    min-width: 280px;
    min-height: 280px;
    max-width: 35rem;
    max-height: 35rem;
    overflow: hidden;
    border: 5px solid #000000;
    border-radius: 5px;
    margin: 10rem auto;
}

.game-grid {
    display: grid;
    grid-gap: 5px;
    background-color: rgb(43, 46, 226);
    grid-template-columns: repeat(7, 1fr);
    grid-template-rows: repeat(7, 1fr);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 5px;
}

.game-cell {
    background: none;
    background-color: white;
    border-radius: 50%;
}

.game-cell-bottom {
    background-color: rgb(43, 46, 226);
}

/* counters */

.player-one {
    background-color: red;
}

.player-two {
    background-color: yellow;
}

footer {
    display: flex !important;
    flex-direction: row !important;
    justify-content: space-between;
    align-items: center;
    margin-top: auto;
    background-color: rgb(206, 206, 206);
}

.social-icon {   
    height: 30px;  
    display: flex;
    margin: 5px 10px;    
    align-items: center;
    font-size: 20px;
}

/* modals */

.new-game-modal {
    display: none;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    position: absolute;
    top: 0;
}

.new-game-close {
    position: absolute;
    top: 0;
    right: 15px;
    font-size: 30px;
    transform: rotate(45deg);
    cursor: pointer;
}

.help-modal {
    display: none;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    position: absolute;
    top: 0;
}

.help-close {
    position: absolute;
    top: 0;
    right: 15px;
    font-size: 30px;
    transform: rotate(45deg);
    cursor: pointer;
}

.settings-modal {
    display: none;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    position: absolute;
    top: 0;
}

.settings-close {
    position: absolute;
    top: 0;
    right: 15px;
    font-size: 30px;
    transform: rotate(45deg);
    cursor: pointer;
}

.contact-modal {
    display: none;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    position: absolute;
    top: 0;
}

.contact-close {
    position: absolute;
    top: 0;
    right: 15px;
    font-size: 30px;
    transform: rotate(45deg);
    cursor: pointer;
}

.modal-content {
    display: block;
    width: 80%;
    height: 80%;
    background-color: white;
    border-radius: 5px;
    padding: 20px;
    text-align: center;
    position: relative;
}

/* media queries*/

@media only screen and (min-width: 768px) {

    header {
        align-items: center;
    }

    .game-section {
        min-height: 30vh;
    }

    .game-board {
        margin: 3rem auto;
    }
}

